Archive2/f8/8c8ce871b6be9a/output
main.cpp:5:22: error: addition of default argument on redeclaration makes this constructor a copy constructor
X::X(const X& x, int i =0) { }
                     ^  ~
main.cpp:2:5: note: previous declaration is here
    X(const X&, int);
    ^
1 error generated.
