Archive2/f8/8c8ce871b6be9a/main.cpp
struct X {
    X(const X&, int);
};

X::X(const X& x, int i =0) { }

int main()
{ 
    
}

